latest logo added

--- a/services/testing.html
+++ b/services/testing.html
@@ -19,68 +19,30 @@
 <link rel="stylesheet" href="../css/tablet.css" type="text/css">
 <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.0.8/css/all.css">
 <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/@fortawesome/fontawesome-free@5.15.3/css/fontawesome.min.css">
+<script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
+    <script>
+        $(function () {
+            $('#myBtn-arrow').click(function () {
+                $('html,body').animate({
+                    scrollTop: 0
+                }, 1000);
+                return false;
+            });
+        });
 
+    </script>
 
 </head>
 
 <body style="background: url(../images/banners/training2.jpg) no-repeat; background-size: cover;">
-	<button onclick="topFunction()" id="myBtn-arrow" title="Go to top"><img class="arrow-icon"
+	<button id="myBtn-arrow" title="Go to top"><img class="arrow-icon"
 		src="../images/icon/up-arrow.png"></button>
-	<script>
-		// Get the button
-		let mybutton = document.getElementById("myBtn");
-
-		// When the user scrolls down 20px from the top of the document, show the button
-		window.onscroll = function () { scrollFunction() };
-
-		function scrollFunction() {
-			if (document.body.scrollTop > 20 || document.documentElement.scrollTop > 20) {
-				mybutton.style.display = "block";
-			} else {
-				mybutton.style.display = "none";
-			}
-		}
-
-		// When the user clicks on the button, scroll to the top of the document
-		function topFunction() {
-			document.body.scrollTop = 0;
-			document.documentElement.scrollTop = 0;
-		}
-	</script>
-
-	<!--
-	<div id="header">
-		<div>
-			<div style="width:25%;float:left;margin-top:-10px;">
-				<a href="index.html">
-				<img src="./images/logo-4.png" style="width:275px;"></img></a>
-			</div>
-			<ul id="navigation">
-				<li class="active">
-					<a href="index.html">Home</a>
-				</li>
-				<li>
-					<a href="services.html">Services</a>
-				</li>
-				<li>
-					<a href="trainings.html">Trainings</a>
-				</li>
-				<li>
-					<a href="about.html">About Us</a>
-				</li>
-				<li>
-					<a href="contact.html">Contact</a>
-				</li>
-				
-			</ul>
-		</div>
-	</div>-->
 	<header>
 		<section class="m-0 infodales-header" style="background-color: #282836;border-bottom: 1px solid #e6e6e6;">
 			<nav class="navbar navbar-expand-lg navbar-light ">
 				<div class="container" style="padding-bottom: 0 !important;">
 					<div style="width:25%;float:left;margin-top:-10px;">
-						<a href="#" class=""><img src="../images/logo-4.png" style="width:275px;"></img></a>
+						<a href="#" class=""><img src="../images/logo/main-logo.png" style="width:275px;"></img></a>
 					</div>
 
 					<button type="button" class="navbar-toggler" data-bs-toggle="collapse"
@@ -90,6 +52,7 @@
 					<div class="collapse navbar-collapse" id="navbarCollapse">
 						<div class="navbar-nav">
 							<a class="nav-item nav-link nav-link-infodales active" href="../index.html">Home</a>
+							<a class="nav-item nav-link " href="../about.html">About Us</a>
 							<div class="nav-item dropdown">
 								<a href="#" class="nav-link dropdown-toggle" data-bs-toggle="dropdown">Services</a>
 								<div class="dropdown-menu" style="background-color: #282836;">
@@ -106,9 +69,6 @@
 									<a href="../trainings/devops.html" class="dropdown-item">Dev-ops</a>
 								</div>
 							</div>
-
-
-							<a class="nav-item nav-link " href="../about.html">About Us</a>
 							<a class="nav-item nav-link " href="../contact.html">Contact</a>
 						</div>
 
@@ -293,7 +253,7 @@
                     <div class="col-xl-3 col-lg-3 mb-50">
                         <div class="footer-widget">
                             <div class="footer-logo">
-                                <a href="./index.html"><img src="../images/logo-4.png" class="img-fluid" alt="logo"></a>
+                                <a href="./index.html"><img src="../images/logo/main-logo.png" class="img-fluid" alt="logo"></a>
                             </div>
                             <div class="footer-text">
                                 <p>We design, develop and customize web platforms that are maintainable and
