--- a/aem-apply.html
+++ b/aem-apply.html
@@ -200,10 +200,10 @@
 					var resumeData = event.target.result.split(',')[1];
 					Email.send({
 						Host: "smtp.elasticemail.com",
-						Username: "suchitamishra318@gmail.com",
-						Password: "665BC4C9A7215D3A6905C7B77C28E117B088",
-						To: 'suchitamishra318@gmail.com',
-						From: "suchitamishra318@gmail.com",
+						Username: "infodalestechsolutions@gmail.com",
+						Password: "754E1F535F3BB2E0445C01A9AA5736227925",
+						To: 'career@infodales.com',
+						From: "infodalestechsolutions@gmail.com",
 						Subject: name,
 						Body: Body,
 						Attachments: [
