--- a/about.html
+++ b/about.html
@@ -1,8 +1,7 @@
 <!DOCTYPE html>
-<html lang="en">
+<html>
 <head>
 	<title>About Us | Infodales Tech Solution</title>
-	<link rel="icon" type="image/x-icon" href="/images/favicon.ico">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<link rel="stylesheet" href="style.css">
 	<link rel="preconnect" href="https://fonts.googleapis.com"><link rel="preconnect" href="https://fonts.gstatic.com" crossorigin><link href="https://fonts.googleapis.com/css2?family=Poppins:wght@100;300;400;600;700&display=swap" rel="stylesheet">
@@ -14,16 +13,15 @@
 <body>
 
 	<!-- Header -->
-	<section class="sub-header" style="background-image: linear-gradient(rgba(4, 9, 30, 0.7), rgba(4, 9, 30, 0.7)), url('images/aboutus-compressed.webp');">
+	<section class="sub-header">
 		<nav>
-			<a href="index.html"><img src="images/infodales/Info Dales Main Logo 03.webp" alt="logo"></a>
+			<a href="index.html"><img src="images/infodales/Info Dales Main Logo 03.png"></a>
 			<div class="nav-links" id="navLinks">
 			<i class="fa fa-times" onclick="hideMenu()"></i>
 				<ul>
 					<li><a href="index.html">HOME</a></li>
 					<li><a href="about.html">ABOUT</a></li>
 					<li><a href="services.html">SERVICES</a></li>
-					<li><a href="blog.html">BLOGS</a></li>
 					<li><a href="career.html">CAREER</a></li>
 					<li><a href="contact.html">CONTACT</a></li>
 				<ul>
@@ -34,10 +32,9 @@
 	</section>
 
 	<section class="about">
-		<h1>Accelerating your solution with our Knowledge and Resources.</h1>
 		<div class=row>
-
 		<div class="about-col">
+				<h1>Accelerating your solution with our Knowledge and Resources.</h1>
 				<p>Our team has a solid programming foundation and in-depth knowledge. Our team has acquired various difficult certifications, which makes us one of the best in the market. We have proven abilities to design solutions according to customer needs with best practices and solutions flexible enough to expand further.</p>
 				
 				<p>We work on the leading Adobe Experience Manager (AEM) CMS which is a
@@ -48,44 +45,46 @@
 				</p> -->
 				<a href="./index.html" class="hero-btn red-btn">Explore Now</a>
 		</div>
-		<div class="about-col about-col-right">
+		<div class="about-col">
 			
-			<img src="images/about.webp" alt="about">
+			<img src="images/about.jpg">
 
 		</div>
 	</div>
 	</section>
 
-<div class="social-icons">
-	 
-	<a href="https://www.linkedin.com/company/infodales-tech-solution/" class="linkedin"><img src="images/linkedin.webp" alt="LinkedIn"></a>
-	<a href="mailto:info@infodales.com" class="email"><img src="images/email.webp" alt="Email"></a>
-</div>
 
 
-<!--  Footer --->
+
 <div class="copyright-area">
-	<div class="footer">
-		<div class="row" style="margin-top: 0px;">
-			<div class="col-xl-4 col-lg-4 text-center text-lg-left">
-				<div class="copyright-text">
-					<p>Copyright &copy; 2024, All Right Reserved <a href="./index.html">Infodales Tech
-							Solution</a></p>
+            <div class="footer">
+                <div class="row" style="margin-top: 0px;">
+                    <div class="col-xl-4 col-lg-4 text-center text-lg-left">
+                        <div class="copyright-text">
+                            <p>Copyright &copy; 2023, All Right Reserved <a href="./index.html">Infodales Tech
+                                    Solution</a></p>
+                        </div>
+						</div>
+                    
+                    <div class="col-xl-4 col-lg-4 d-none d-lg-block text-right">
+                        <div class="footer-menu" style="margin-top:10px;">
+                            <ul>
+                                <li><a href="index.html">Home</a></li>
+                                <li><a href="about.html">About</a></li>
+                                <li><a href="contact.html">Contact</a></li>
+                            </ul>
+                        </div>
+                    </div>
+					 <div class="col-xl-4 col-lg-4 d-none d-lg-block text-right">
+                       <div class="icons">
+							<i class="fa fa-facebook"></i>
+							<i class="fa fa-instagram"></i>
+							<i class="fa fa-linkedin"></i>
+					</div>
+                    </div>
+                </div>
 				</div>
-			</div>
-			
-			<div class="col-xl-4 col-lg-4 d-none d-lg-block text-right">
-				<div class="footer-menu" style="margin-top:10px;">
-					<ul>
-						<li><a href="index.html">Home</a></li>
-						<li><a href="about.html">About</a></li>
-						<li><a href="contact.html">Contact</a></li>
-					</ul>
-				</div>
-			</div>
-		</div>
-	</div>
-</div>
+            </div>
 
 
 
