--- a/services.html
+++ b/services.html
@@ -1,8 +1,7 @@
 <!DOCTYPE html>
-<html lang="en">
+<html>
 <head>
 	<title>Services | Infodales Tech Solution</title>
-	<link rel="icon" type="image/x-icon" href="/images/favicon.ico">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<link rel="stylesheet" href="style.css">
 	<link rel="preconnect" href="https://fonts.googleapis.com"><link rel="preconnect" href="https://fonts.gstatic.com" crossorigin><link href="https://fonts.googleapis.com/css2?family=Poppins:wght@100;300;400;600;700&display=swap" rel="stylesheet">
@@ -14,16 +13,15 @@
 <body>
 
 	<!-- Header -->
-	<section class="sub-header" style="background-image: linear-gradient(rgba(4, 9, 30, 0.7), rgba(4, 9, 30, 0.7)), url('images/services1-compressed.webp');">
+	<section class="sub-header">
 		<nav>
-			<a href="index.html"><img src="images/infodales/Info Dales Main Logo 03.webp" alt="logo"></a>
+			<a href="index.html"><img src="images/infodales/Info Dales Main Logo 03.png"></a>
 			<div class="nav-links" id="navLinks">
 			<i class="fa fa-times" onclick="hideMenu()"></i>
 				<ul>
 					<li><a href="index.html">HOME</a></li>
 					<li><a href="about.html">ABOUT</a></li>
 					<li><a href="services.html">SERVICES</a></li>
-					<li><a href="blog.html">BLOGS</a></li>
 					<li><a href="career.html">CAREER</a></li>
 					<li><a href="contact.html">CONTACT</a></li>
 				<ul>
@@ -46,7 +44,7 @@
 		<div class="row">
 			<div class="course-col">
 				<h3>AEM Web Development</h3>
-				<p> There are lots of AEM development companies, which will offer you cq5/AEM CMS implementation along with expertise in AEM Manager. But choosing the right one always matters. Infodales Techsolutions provides you with delivery teams according to the time zone to serve you better.</p>
+				<p> There are lots of AEM development’s companies, which will offer you cq5/AEM CMS implementation along with expertise in AEM Manager. But choosing the right one always matters. Infodales Techsolutions provides you with delivery teams according to the time zone to serve you better.</p>
 
 			</div>
 
@@ -68,45 +66,46 @@
 <!--- Faclities -->
 <section class="facilities">
 	<h1>What to expect from Adobe Experience Manager?</h1>
+	<p></p>
 
 	<div class="row">
 		<div class="facilities-col">
-				<img src="images/services/aem-sites.webp" alt="AEM sites">
+				<img src="images/services/aem-sites.webp">
 				<h3>Adobe AEM Sites</h3>
 				<p>Build and manage multiple responsively designed sites, tailored across different regions & languages from a central platform. Optimize your eCommerce site, launch marketing campaigns and deliver unified experiences across touchpoints with Adobe AEM Sites.</p>
 		</div>
 
 		<div class="facilities-col">
-				<img src="images/services/aem-assets.webp" alt="AEM assets">
+				<img src="images/services/aem-assets.png">
 				<h3>Adobe AEM Assets</h3>
 				<p>Manage and deliver images, videos and content across devices and screens while automatically assigning metadata and tags to all your assets. Develop customized versions of your assets to deliver personalized and targeted experiences to your users.</p>
 		</div>
 
 		<div class="facilities-col">
-				<img src="images/services/aem-forms.webp" alt="AEM forms">
+				<img src="images/services/aem-forms.webp">
 				<h3>Adobe AEM Forms</h3>
 				<p>The easy drag-and-drop interface of Adobe CMS empowers you to quickly develop and update mobile apps using a single codebase for multiple platforms. You can even Analyze your app’s performance & metrics by leveraging the built-in Adobe Analytics.</p>
 		</div>
 
 
 	</div>
-	<div class="row row-bottom">
+	<div class="row">
 		<div class="facilities-col">
-				<img src="images/services/adobe-analytics-2.webp" alt="adobe analytics">
+				<img src="images/services/adobe-analytics-2.jpg">
 				<h3>Adobe Analytics</h3>
 				<p>Integrate Adobe Experience Manager with various third-party tools to deliver consistent content experiences across all channels. Its headless capabilities help you establish complete ownership of your content and flexibly update it as per user demographics and statistics.</p>
 		</div>
 
 		<div class="facilities-col">
-				<img src="images/services/aem-target.webp" alt="AEM target">
+				<img src="images/services/aem-target.jpg">
 				<h3>Adobe Target</h3>
 				<p>Streamline workflows for different projects by assigning role-based access and setting up individual workspaces in Adobe Experience Manager. Adobe Experience Manager (AEM) features like comments and annotations help improve site quality and productivity.</p>
 		</div>
 
 		<div class="facilities-col">
-				<img src="images/services/aem-sites.webp" alt="AEM forms">
+				<img src="images/services/aem-sites.webp">
 				<h3>Adobe AEM Forms</h3>
-				<p>Create forms based on your user&apos;s location, device, and browsing behavior and deliver dynamic experiences anytime and anywhere. Users can leverage pre-filled fields, responsive designs, help text, and electronic signatures to easily and quickly fill forms.</p>
+				<p>Create forms based on your user’s location, device, and browsing behavior and deliver dynamic experiences anytime and anywhere. Users can leverage pre-filled fields, responsive designs, help text, and electronic signatures to easily and quickly fill forms.</p>
 		</div>
 
 
@@ -116,24 +115,25 @@
 
 
 
-<section class="facilities facilities-bottom">
+<section class="facilities">
 	<h1>What to expect from Software Testing?</h1>
+	<p></p>
 
 	<div class="row">
 		<div class="facilities-col">
-				<img src="images/manual-testing.webp" alt="manual testing">
+				<img src="images/manual-testing.png">
 				<h3>Manual Testing</h3>
-				<p>Manual testing is the most important part of any test strategy which helps QAs to gain deeper insight from an end user’s perspective. Since manual testing is carried out by a human, it judges software from the most important metric: User Experience.</p>
+				<p>Manual testing is the most important part of any test strategy which helps QAs to gain deeper insight from an end user’s perspective. Since manual testing is carried out by a human , it judges software from the most important metric: User Experience.</p>
 		</div>
 
 		<div class="facilities-col">
-				<img src="images/cypress.webp" alt="cypress">
+				<img src="images/cypress.png">
 				<h3>Automation Testing with Cypress</h3>
 				<p>Automation testing is the application of tools and technology to test software with the goal of reducing testing effort, delivering capability faster and more affordably. It helps in building better quality software with less effort.</p>
 		</div>
 
 		<div class="facilities-col">
-				<img src="images/api-testing.webp" alt="api testing">
+				<img src="images/api-testing.png">
 				<h3>API Testing</h3>
 				<p>API testing is the testing of a set of application programming interfaces (APIs) directly and as part of integration testing to determine whether they meet expectations for functionality, reliability, performance, and security.</p>
 		</div>
@@ -142,35 +142,37 @@
 	</div>
 </section>
 
-<div class="social-icons">
-         
-        <a href="https://www.linkedin.com/company/infodales-tech-solution/" class="linkedin"><img src="images/linkedin.webp" alt="LinkedIn"></a>
-        <a href="mailto:info@infodales.com" class="email"><img src="images/email.webp" alt="Email"></a>
-    </div>
 
 <!--  Footer --->
 <div class="copyright-area">
-	<div class="footer">
-		<div class="row" style="margin-top: 0px;">
-			<div class="col-xl-4 col-lg-4 text-center text-lg-left">
-				<div class="copyright-text">
-					<p>Copyright &copy; 2024, All Right Reserved <a href="./index.html">Infodales Tech
-							Solution</a></p>
+            <div class="footer">
+                <div class="row" style="margin-top: 0px;">
+                    <div class="col-xl-4 col-lg-4 text-center text-lg-left">
+                        <div class="copyright-text">
+                            <p>Copyright &copy; 2023, All Right Reserved <a href="./index.html">Infodales Tech
+                                    Solution</a></p>
+                        </div>
+						</div>
+                    
+                    <div class="col-xl-4 col-lg-4 d-none d-lg-block text-right">
+                        <div class="footer-menu" style="margin-top:10px;">
+                            <ul>
+                                <li><a href="index.html">Home</a></li>
+                                <li><a href="about.html">About</a></li>
+                                <li><a href="contact.html">Contact</a></li>
+                            </ul>
+                        </div>
+                    </div>
+					 <div class="col-xl-4 col-lg-4 d-none d-lg-block text-right">
+                       <div class="icons">
+							<i class="fa fa-facebook"></i>
+							<i class="fa fa-instagram"></i>
+							<i class="fa fa-linkedin"></i>
+					</div>
+                    </div>
+                </div>
 				</div>
-			</div>
-			
-			<div class="col-xl-4 col-lg-4 d-none d-lg-block text-right">
-				<div class="footer-menu" style="margin-top:10px;">
-					<ul>
-						<li><a href="index.html">Home</a></li>
-						<li><a href="about.html">About</a></li>
-						<li><a href="contact.html">Contact</a></li>
-					</ul>
-				</div>
-			</div>
-		</div>
-	</div>
-</div>
+            </div>
 
 
 <!--- Java Script-->	
