--- a/blogs/forms-introduction.html
+++ b/blogs/forms-introduction.html
@@ -117,11 +117,11 @@
                 		<img src="/images/AEM-Forms-Intro/formcreateby.webp" alt="AEM Form Types">
 					</div>
                	</div>
-             		 <h1>Step To Create an Adaptive Forms</h1>
-              		<h2>Create an Adaptive Form Template</h2>
+             		 <h2>Step To Create an Adaptive Forms</h2>
+              		<h3 style="text-align: left;">Create an Adaptive Form Template</h3>
               		<p>Every adaptive form is based on an adaptive form template. The template defines the structure, initial content, theme, etc., the adaptive form inherits. You can create a new adaptive form template or use the out-of-the-box template when creating your adaptive form.</p>
               		<p>To create an adaptive form template, follow these steps:</p>
-              		<h2>Create a folder </h2>
+              		<h3 style="text-align: left;">Create a folder </3>
               		<ol class="blog-items blog-ol" style="margin-left: auto; width: 93%;">
                 		<li><p>Navigate to <strong>Tool &gt; General &gt; Configuration Browser</strong>.</p></li>
 					<div class="image-container">		
@@ -133,7 +133,7 @@
                 		<img src="/images/AEM-Forms-Intro/selectET.webp" alt="AEM Form Types">
 					</div>	
               		</ol>
-              		<h2>Create a form template</h2>
+              		<h3 style="text-align: left;">Create a form template</h3>
               		<ol class="blog-items blog-ol" style="margin-left: auto; width: 93%;">
                 		<li><p>To create a template, go to <strong>Tool &gt; General &gt; Template</strong>.</p></li>
 					<div class="image-container">		
@@ -149,7 +149,7 @@
 					<div class="image-container">
               			<img src="/images/AEM-Forms-Intro/enable-temp.webp" alt="AEM Form Types" />
 					</div>		
-              		<h2>Create Adaptive Form:</h2>
+					<h3 style="text-align: left;">Create Adaptive Form:</h3>
 					<div class="image-container">
               			<img src="/images/AEM-Forms-Intro/formmodule.webp" alt="AEM Form Types" />
 					</div>	
@@ -195,7 +195,7 @@
                 		<img src="/images/AEM-Forms-Intro/Preview.webp" alt="AEM Form Types">
 					</div>	
                 	</0l>
-               		 <h2>Creating Form Fragments</h2>
+					<h3 style="text-align: left;">Creating Form Fragments</h3>
                 	<p>A fragment is a reusable component within a form, designed to serve a specific purpose such as presenting an address block or legal text. Leveraging fragments streamlines the process of creating and maintaining numerous forms, enhancing efficiency and consistency across form development.</p>
                 	<ol class="blog-items blog-ol" style="margin-left: auto; width: 93%;">
                   		<li><p>Go to <strong>Forms and Documents</strong>.</p></li>
@@ -239,7 +239,7 @@
               		<span class="author-designation">AEM Developer</span>
             	</div>
           	</div>
-          	<div style="display: flex; justify-content: center;">
+          	<!-- <div style="display: flex; justify-content: center;">
             	<div class="comment-box">
               		<h3> Leave a Comment</h3>
               		<form class="comment-form">
@@ -249,7 +249,7 @@
                 		<button type="submit" class="hero-btn red-btn">Your Comment</button>
               		</form>
             	</div>
-          	</div>
+          	</div> -->
         </div>
    		 </div>
       	</div>
