--- a/blogs/spa-component-mapping.html
+++ b/blogs/spa-component-mapping.html
@@ -218,7 +218,7 @@ MapTo("wknd-spa-react/components/test")(Test,TestEditConfig);
 		<span class="author-designation">AEM Developer</span>
 	</div>
 </div>
-				<div style="display: flex; justify-content: center;">
+				<!-- <div style="display: flex; justify-content: center;">
 					<div class="comment-box" >
 						<h3> Leave a Comment</h3>
 						<form class="comment-form">
@@ -228,7 +228,7 @@ MapTo("wknd-spa-react/components/test")(Test,TestEditConfig);
 							<button type="submit" class="hero-btn red-btn">Your Comment</button>
 						</form>
 					</div>
-				</div>
+				</div> -->
 			</div>
 		</div>
 	</section>
