--- a/blogs/aem-introduction.html
+++ b/blogs/aem-introduction.html
@@ -168,7 +168,7 @@
 						<span class="author-designation">AEM Developer</span>
 					</div>
 				</div>
-				<div style="display: flex; justify-content: center;">
+				<!-- <div style="display: flex; justify-content: center;">
 					<div class="comment-box" >
 						<h3> Leave a Comment</h3>
 						<form class="comment-form">
@@ -178,7 +178,7 @@
 							<button type="submit" class="hero-btn red-btn">Your Comment</button>
 						</form>
 					</div>
-				</div>
+				</div> -->
 			</div>
 		</div>
 	</div>
