--- a/blogs/dispatcher.html
+++ b/blogs/dispatcher.html
@@ -258,7 +258,7 @@
                   <span class="author-designation">AEM Developer</span>
                </div>
             </div>
-            <div style="display: flex; justify-content: center;">
+            <!-- <div style="display: flex; justify-content: center;">
                <div class="comment-box" >
                   <h3> Leave a Comment</h3>
                   <form class="comment-form">
@@ -268,7 +268,7 @@
                      <button type="submit" class="hero-btn red-btn">Your Comment</button>
                   </form>
                </div>
-            </div>
+            </div> -->
          </div>
 		</div>
 	</section>
