--- a/blogs/form-rule-editor.html
+++ b/blogs/form-rule-editor.html
@@ -241,7 +241,7 @@
 						<span class="author-designation">AEM Developer</span>
 					</div>
 				</div>
-				<div style="display: flex; justify-content: center;">
+				<!-- <div style="display: flex; justify-content: center;">
 					<div class="comment-box" >
 						<h3> Leave a Comment</h3>
 						<form class="comment-form">
@@ -251,7 +251,7 @@
 							<button type="submit" class="hero-btn red-btn">Your Comment</button>
 						</form>
 					</div>
-				</div>
+				</div> -->
 			</div>
 		</div>
 	</section>
