--- a/blogs/form-submission.html
+++ b/blogs/form-submission.html
@@ -146,7 +146,7 @@
 						</div>
 					</div>
 
-					<div style="display: flex; justify-content: center;">
+					<!-- <div style="display: flex; justify-content: center;">
 						<div class="comment-box" >
 							<h3> Leave a Comment</h3>
 							<form class="comment-form">
@@ -156,7 +156,7 @@
 								<button type="submit" class="hero-btn red-btn">Your Comment</button>
 							</form>
 						</div>
-					</div>
+					</div> -->
 			</div>
 		</div>
 	</section>
